--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,10 @@
         },
         {
             "src": "frontend/package.json",
-            "use": "@vercel/vite"
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "dist"
+            }
         }
     ]
 }
