Fix Vercel rewrite: add explicit rule for /api/health to prevent frontend redirect

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
     "version": 2,
     "rewrites": [
         {
+            "source": "/api/health",
+            "destination": "/backend/api/index.js"
+        },
+        {
             "source": "/api/(.*)",
             "destination": "/backend/api/index.js"
         },
