--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/api/health",
+            "source": "/api/health(.*)",
             "destination": "/backend/api/index.js"
         },
         {
